# iot-micro-leasing

./: .env  Makefile  README.EN.md  README.md  README_IoT_EN.md  README_IoT_RU.md  docker-compose.yml  pyproject.toml
admin_panel/: db.sqlite3
admin_panel/admin_panel/: settings.py  urls.py  views.py
admin_panel/devices/: admin.py  models.py
admin_panel/devices/migrations/: 0001_initial.py  0002_usagesession_last_ping_at.py
admin_panel/templates/admin/: redis_metrics.html
api/: main.py
api/core/: celery_app.py  config.py
api/dependencies/: db.py
api/models/: device.py
api/schemas/: device.py  usage.py
api/services/: device_service.py  usage_service.py
api/tasks/: generate_invoice.py
api/v1/endpoints/: device.py  usage.py
config/: settings.py
iot_micro_leasing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/api/v1/: test_usage.py
